<resources>
    <string name="app_name">KeepIt</string>
    <string name="login">Se connecter</string>
    <string name="register">Inscription</string>
    <string name="username_hint">Identifiant</string>
    <string name="passwd_hint">Mot de passe</string>
    <string name="register_name_hint">Identifiant</string>
    <string name="register_passwd_hint">Mot de passe</string>
    <string name="register_confirm_passwd_hint">Confirmer mot de passe</string>
    <string name="logout">Déconnexion</string>
    <string name="profile">Information</string>
    <string name="profile_user">Identifiant：</string>
    <string name="profile_passwd_change">Changer mot de passe</string>
    <string name="passwd_change">Changer mot de passe</string>
    <string name="changepwd_pwdo_hint">Mot de passe ancien</string>
    <string name="changepwd_pwdn_hint">Mot de passe nouveau</string>
    <string name="changepwd_pwdc_hint">Confirmer mot de passe</string>
    <string name="title_home">Thème</string>
    <string name="title_dashboard">Créer une séance</string>
    <string name="title_notifications"> Profile</string>
    <string name="sceance_nom"> Nom : </string>
    <string name="sceance_duree"> Durée : </string>
    <string name="sceance_intensite"> Intensité : </string>
    <string name="sceance_nombre"> Nombre de répétition : </string>
    <string name="sceance_description"> Description : </string>
    <string name="create_topic">Créer un thème</string>
    <string name="in_topic_name">Nom du thème</string>
    <string name="create_exercise">Créer un entraînement</string>
    <string name="in_exercise_name">Nom entraînement</string>
    <string name="in_exercise_description">Description entraînement</string>
    <string name="afficherSeance">Mes séances</string>
    <string name="reset"> refait </string>
    <string name="start"> démarrer </string>
    <string name="stop"> arrêt </string>
    <string name="verifierIden">Veuillez vérifier Identifiant et mot de passe</string>
    <string name="IdenExiste">Identifiant déjà existe</string>
    <string name="InsertSucce">Réussi à créer</string>
    <string name="SelectImgName">Veuillez choisir image et thème</string>
    <string name="NameExiste">Nom déjà exist</string>
    <string name="InsertEchou">Créer échoué</string>
    <string name="DiffMot">Mot de passe différent</string>
    <string name="FirstExe">C\'est un premier entraînement</string>
    <string name="LastExe">C\'est un dernier entraînement</string>
    <string name="felicitation">Félicitation</string>
    <string name="no_name">Veuillez entrer Identifiant</string>
    <string name="no_pwd">Veuillez entrer mot de passe</string>
    <string name="no_pwd_new">Veuillez entrer nouveau mot de passe</string>
    <string name="no_pwd_chicker">Veuillez entrer mot de passe à la fois</string>
    <string name="no_pwd_new_chicker">Veuillez entrer nouveau mot de passe à la fois</string>

</resources>
