<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginSize"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/titleSize" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/titleSize" />
    </LinearLayout>
        <TextView
            android:id="@+id/change_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/marginSize"
            android:textSize="@dimen/titleSize"
            android:textColor="@color/mainColor"
            android:text="@string/profile_passwd_change"
            android:onClick="onChangePwdClick"
            />
    <TextView
        android:id="@+id/afficher_seance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginSize"
        android:gravity="center_horizontal"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/mainColor"
        android:text="@string/afficherSeance"
        android:onClick="onAfficherSeanceClick"
        />
        <Button
            style="@style/commitBtn"
            android:text="@string/logout"
            android:id="@+id/btn_logout"
            />
</LinearLayout>